@@ -11,6 +11,7 @@ import com.sparta.doguin.domain.board.dto.BoardRequest.BoardCommonRequest;
 import com.sparta.doguin.domain.board.dto.BoardResponse;
 import com.sparta.doguin.domain.board.dto.BoardResponse.BoardCommonResponse;
 import com.sparta.doguin.domain.board.entity.Board;
+import com.sparta.doguin.domain.board.event.ViewEvent;
 import com.sparta.doguin.domain.board.repository.BoardRepository;
 import com.sparta.doguin.domain.common.exception.HandleNotFound;
 import com.sparta.doguin.domain.common.exception.InvalidRequestException;
@@ -20,7 +21,6 @@ import com.sparta.doguin.notification.slack.SlackEventClass;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.cache.annotation.Cacheable;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
@@ -32,10 +32,8 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static com.sparta.doguin.domain.attachment.constans.AttachmentTargetType.BULLETIN;
-import static com.sparta.doguin.domain.attachment.constans.AttachmentTargetType.OUTSOURCING;
 
 @Service
 @RequiredArgsConstructor
@@ -72,8 +70,6 @@ public class BulletinService implements BoardService {
             attachmentUploadService.upload(files,user,board.getId(), BULLETIN);
             attachmentGetService.getFileIds(user.getId(),board.getId(), BULLETIN);
         }
-
-        log.info(user.getNickname());
         publisher.publishEvent(new SlackEventClass(user.getId(), user.getNickname(), "(이)가 새 게시물을 등록했습니다."));
     }
 
@@ -87,12 +83,16 @@ public class BulletinService implements BoardService {
      * @throws HandleNotFound 일반 게시물 조회 시 데이터가 없을 경우 발생
      * @throws InvalidRequestException 게시물 제작자와 로그인한 유저가 다를 경우 발생
      * @throws InvalidRequestException 게시물 타입이 일반 게시물이 아닐 경우 발생
-     * @return 수정된 일반 게시물 객체
      * @author 김창민
      */
     @Override
     @Transactional
     public void update(User user,Long boardId, BoardCommonRequest boardRequest,List<MultipartFile> files) {
+        System.out.println(boardId);
+        System.out.println(boardRequest.content());
+        for ( Long filePath : boardRequest.fileIds() ) {
+            System.out.println(filePath);
+        }
         Board board = boardRepository.findById(boardId)
                 .orElseThrow(() -> new HandleNotFound(ApiResponseBoardEnum.BULLETIN_NOT_FOUND));
 
@@ -102,6 +102,7 @@ public class BulletinService implements BoardService {
         if (board.getBoardType() != boardType) {
             throw new InvalidRequestException(ApiResponseBoardEnum.BULLETIN_WRONG);
         }
+        attachmentUpdateService.update(files,boardRequest.fileIds(),user);
         board.update(boardRequest.title(), boardRequest.content()); // 업데이트 정보 null 처리
 
     }
@@ -118,7 +119,6 @@ public class BulletinService implements BoardService {
      * @since 1.0
      */
     @Override
-    @Cacheable(value = "PopularBoard",key = "'게시글번호'+#boardId")
     public BoardResponse.BoardWithAnswer viewOneWithUser(Long boardId, User user) {
         Board board = boardRepository.findById(boardId)
                 .orElseThrow(() -> new HandleNotFound(ApiResponseBoardEnum.BULLETIN_NOT_FOUND));
@@ -130,9 +130,7 @@ public class BulletinService implements BoardService {
 
         Page<AnswerResponse.Response> responses = bulletinAnswerService.findByBoardId(boardId,PageRequest.of(0,10));
 
-        if(user!=null){
-            popularService.trackUserView(boardId, user.getId()); // 한시간 조회수 누적
-        }
+        publisher.publishEvent(new ViewEvent(boardId, user != null ? user.getId() : null));
 
         Long viewCount = popularService.getHourUniqueViewCount(boardId)+board.getView(); // 한시간 조회수 + 누적 조회수 로 토탈 조회수
 
@@ -225,6 +223,7 @@ public class BulletinService implements BoardService {
      * @since 1.0
      * @author 김창민
      */
+    @Override
     public Page<Long> viewPopular(int page, int size){
         Pageable pageable = PageRequest.of(page - 1, size);
         Set<Long> popularBoardIds = popularService.viewPopularBoardList();
@@ -235,19 +234,13 @@ public class BulletinService implements BoardService {
         }
 
         // 인기 게시물 ID를 리스트로 변환
-        List<Long> popularBoardIdList = popularBoardIds.stream().collect(Collectors.toList());
-        log.info(String.valueOf(popularBoardIdList.size()));
+        List<Long> popularBoardIdList = popularBoardIds.stream().toList();
 
         // 페이지 처리
         int start = Math.min((page-1) * size, popularBoardIdList.size());
         int end = Math.min(start + size, popularBoardIdList.size());
         List<Long> paginatedBoardIds = popularBoardIdList.subList(start, end);
 
-
         return new PageImpl<>(paginatedBoardIds,pageable, popularBoardIdList.size());
     }
-
-
-
-
 }
